# screentap

./: .gitignore  LICENSE.md  README.md  run.sh
.github/workflows/: readme-toc.yml  rust-clippy.yml
screen-ocr-swift-rs/: Cargo.toml  build.rs
screen-ocr-swift-rs/src/: lib.rs
screen-ocr-swift-rs/vision-swift/: Package.swift  README.md
screen-ocr-swift-rs/vision-swift/Sources/vision-swift/: vision_swift.swift
screentap-app/: README.md  index.html  index_browse.html  index_focusguard.html  package.json  run.sh  tailwind.config.js  vite.config.ts
screentap-app/plugins/: README.md
screentap-app/plugins/focusguard/: .gitignore  README.md  config.toml  config_sample.toml
screentap-app/src/: App.vue  AppBrowse.vue  AppFocusguard.vue  Focusguard.vue  main_browse.ts  main_focusguard.ts  styles.css
screentap-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
screentap-app/src-tauri/src/: compaction.rs  db.rs  main.rs  screenshot.rs  utils.rs
screentap-app/src-tauri/src/plugins/: mod.rs
screentap-app/src-tauri/src/plugins/focusguard/: config.rs  event.rs  handlers.rs  mod.rs  result.rs  utils.rs
screentap-app/src/components/: BrowseScreenshots.vue  Focusguard.vue  Greet.vue  SearchScreenshots.vue
swift-prototyping/ScreentapSwiftPrototyping/: AventOfCodeExample.swift  MovieMaker.swift  README.md
swift-prototyping/ScreentapSwiftPrototyping/ScreentapSwiftPrototyping/: main.swift
swift-prototyping/ScreentapSwiftPrototyping/ScreentapSwiftPrototyping.xcodeproj/: project.pbxproj
(+4 files in other folders)
