[package]
name = "screentap-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
screen-ocr-swift-rs = { path = "../../screen-ocr-swift-rs"}
chrono = "0.4.31"
rusqlite = { version = "0.30.0", features = ["chrono"] }
base64 = "0.21.6"
image = "0.24.8"
rand = "0.8.5"
tempfile = "3.9.0"
backtrace = "0.3.69"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
toml = "0.8.10"
regex = "1.10.3"
url = "2.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
